--- a/style.css
+++ b/style.css
@@ -15,8 +15,10 @@ body {
 
 .info {
     margin-bottom: 20px;
+    padding: 0 10px;
     color: #0D1F1F;
     font-size: 30px;
+    text-align: center;
 }
 
 .calc-wrapper { 
@@ -66,11 +68,12 @@ body {
     text-align: center;
     border: 1px solid #0D1F1F;
     border-radius: 3px;
-    transition: 0.5s;
+    transition: all 0.4s ease-in-out 0s;
     user-select: none;
 }
 
-.button:hover {
+.button:hover,
+.highlight {
     color: #678A8A;
     background-color: #ece1c9;
 }
@@ -87,7 +90,8 @@ body {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
 }
-.delete:hover {
+.delete:hover,
+.highlight-delete {
     background-color: #ece1c9;
 }
 
